# mlops-home-assessment

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements-cq.sh  requirements-dev.in  requirements-dev.sh  requirements-dev.txt  requirements-prod.in  requirements-prod.sh  requirements-prod.txt  requirements.txt  tox.ini
.github/: CODEOWNERS  README.md
.github/workflows/: pre-commit.yaml  training.yaml
data/: data.py
docker/: Dockerfile  build.sh  cleanup_build_context.sh  configure.sh  create_build_context.sh
experiments/local_exp_test/run_1/: model.pth
image_classifier/: main.py
image_classifier/data/: data.py
image_classifier/data/cifar_dataset/: metadata.json
image_classifier/model/: model.py  train.py  training.py  validation.py
image_classifier/visualization/: plot.py
model/: model.py
notebooks/: mlops_project_classifier.ipynb
requirements/: requirements-build.in  requirements-build.sh  requirements-build.txt  requirements-cq.in  requirements-cq.sh  requirements-cq.txt  requirements-dev.in  requirements-dev.sh  requirements-dev.txt  requirements-prod.in  requirements-prod.txt
scripts/: install-requirements-build.sh  install-requirements-cq.sh  install-requirements-dev.sh
src/image_classifier/: main.py
src/image_classifier/data/: data.py  db_connect.yaml
src/image_classifier/logger/: config.yaml  logger.py
src/image_classifier/modeling/: model.py  training.py  validation.py
src/image_classifier/utils/: file_loaders.py
src/image_classifier/visualization/: plot.py
