#### Code Quality checker tools settings ####
[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"

[tool.vulture]
ignore_names = ["forward*"]
make_whitelist = true
min_confidence = 60
paths = ["image_classifier"]
sort_by_size = true

#### Python packaging ####
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "image-classifier"
version = "0.0.0"
description = "test"
license = "MIT"
authors = ["Peter Santa"]
maintainers = ["Peter Santa"]
readme = "README.md"
repository = "https://github.com/pezosanta/mlops-home-assessment"
packages = [
    {include = "image_classifier", from = "src"}
]

# Packages that always need to be installed (except for pre-commit hooks aka test)
# This is an implicit 'main' group
[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "*"

# Packages that need to be installed for training besides 'main' packages
[tool.poetry.group.train.dependencies]
matplotlib = "*"
torch = "*"
torchvision = "*"
tqdm = "*"

# Packages that need to be installed for production besides 'main' packages
[tool.poetry.group.prod.dependencies]
fastapi = "*"
onnxruntime = "*"

# Packages that need to be installed for local development
[tool.poetry.group.dev.dependencies]
ipykernel = "*"

# Packages that need to be installed for code quality checks / pre-commit hooks
[tool.poetry.group.test.dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
vulture = "*"
shellcheck-py = "*"

# CLI command aliases
[tool.poetry.scripts]
image-classifier-trainer = "image_classifier.main:main"
